--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
+.body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #E7F6F2;
+  height: 100vh;
+}
+
+header{
+  height: 10vh;
+  width: 100vw;
+  background-color: #A5C9CA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1{
+  font-size: 40px;
+  font-family: 'Caveat', cursive;
+  color: #fff;
+  letter-spacing: 5px;
+}
+
+.wrap{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
+}
+
+.main {
+  background-color: #fff;
+  border-radius: 25px;
+  width: 80vw;
+  height: 80vh;
+  margin: 40px auto ;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  margin: 20px 0;
+  width: 30%;
+  height: 40px;
+  font-size: 1.1rem;
+  border: none;
+  background-color: #395b640f;
+  border-radius: 10px 0 0 10px;
+  text-align: center;
+  color: #2c333396;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.text-wrap {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+  width: 60%;
+  background-color: #f3f5f6;
+  padding: 7.5px 0;
+  margin: 5px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  width: 75px;
+  border: none;
+  color: #fff;
+}
+
+.add {
+  padding: 13px 0;
+  background-color: #395B64;
+  border-radius: 0 10px 10px 0;
+  position: relative;
+  top: -1px;
+}
+
+.check{
+  padding: 6.5px  0;
+  background-color: #A5C9CA;
+}
+
+.delete {
+  padding: 6.5px 0;
+  background-color: #395B64;
+}
+
+img {
+  width: 20px;
+}
+
+.completed {
+  text-decoration: line-through;
+  background-color: #8d8d8d;;
 }
